# cpnr_bkg_pmt

./: CMakeLists.txt  Dockerfile  README.md  main.cc
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  MyPhysicsList.hh  PMTSD.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh
macros/: full_bkg.mac  k40_decay.mac  plot.py  plot_spectra.py  shrinkwrap_bkg.mac  th232_chain.mac  u238_chain.mac  vis.mac  vis_optics.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  MyPhysicsList.cc  PMTSD.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
